[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ASX <mragungsetiaji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "7.0"
Flask = "1.0.2"
gunicorn = "19.9.0"
itsdangerous = "1.1.0"
Jinja2 = "2.10"
MarkupSafe = "1.1.0"
Werkzeug = "0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
